test/tests/stages/17_supporting_dynamic_memory_allocation/valid/sizeof/sizeof_not_evaluated.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  void
  identifier(exit)
  (
  int
  identifier(status)
  )
  ;
  int
  identifier(foo)
  (
  void
  )
  {
  identifier(exit)
  (
  const int(10)
  )
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  (
  identifier(foo)
  (
  )
  )
  ;
  }
