test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/convert_void_ptr_to_int.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  void
  *
  identifier(x)
  =
  const int(0)
  ;
  return
  identifier(x)
  ;
  }
